# polaris-tools

./: .gitignore  Makefile  README.md
.github/workflows/: console.yml  mcp-server-nightly.yml
apprunner/: build.gradle.kts
benchmarks/: README.md  build.gradle.kts
benchmarks/src/gatling/resources/: benchmark-defaults.conf
console/: .env.example  Makefile  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
console/docker/: Dockerfile  generate-config.sh  nginx.conf
console/helm/templates/: deployment.yaml
console/src/: app.tsx  main.tsx
console/src/api/: auth.ts  client.ts
console/src/api/catalog/: namespaces.ts  tables.ts  views.ts
console/src/api/management/: catalog-roles.ts  catalogs.ts  principal-roles.ts  principals.ts  privileges.ts
console/src/components/: ErrorBoundary.tsx
console/src/components/catalog/: CatalogExplorer.tsx  CatalogTreeNode.tsx  TableDDLDisplay.tsx  TableDetailsDrawer.tsx  TableSchemaDisplay.tsx  ViewDetailsDrawer.tsx
console/src/components/ui/: card.tsx  (+14 more)
console/src/hooks/: useAuth.tsx  useCurrentUser.tsx  useResizableWidth.ts  useTheme.tsx
console/src/lib/: config.ts  constants.ts  errorHandler.ts  navigation.ts  utils.ts
console/src/pages/: AccessControl.tsx  CatalogDetails.tsx  Catalogs.tsx  Connections.tsx  Home.tsx  Login.tsx  NamespaceDetails.tsx  TableDetails.tsx  ViewDetails.tsx
console/src/types/: api.ts
iceberg-catalog-migrator/: build.gradle.kts  settings.gradle.kts
iceberg-catalog-migrator/buildSrc/: build.gradle.kts
iceberg-catalog-migrator/cli/: BUNDLE-LICENSE  BUNDLE-NOTICE  build.gradle.kts
iceberg-catalog-migrator/docs/: object-store-access-configuration.md
iceberg-catalog-migrator/gradle/: baselibs.versions.toml  libs.versions.toml
mcp-server/: .pre-commit-config.yaml  pyproject.toml
mcp-server/int_test/: client.py
mcp-server/polaris_mcp/: authorization.py  server.py
mcp-server/polaris_mcp/tools/: policy.py
mcp-server/tests/: test_config.py  test_rest_tool.py  test_table_tool.py
polaris-synchronizer/: .gitignore  build.gradle.kts
(+40 files in other folders)
